[project]
name = "confluencetonotion"
version = "0.1.0"
requires-python = ">= 3.10"
dependencies = [
    "confluence-markdown-exporter",
    "atlassian-python-api",
    "python-dotenv",
    "notion-markdown",
    "requests",
]

[tool.uv.sources]
confluence-markdown-exporter = { path = "package/confluence-markdown-exporter", editable = true }
notion-markdown = { path = "package/notion-markdown", editable = true }
