[project]
name = "confluencetonotion"
version = "0.1.0"
requires-python = ">= 3.10"
dependencies = [
    "confluence-markdown-exporter",
    "atlassian-python-api",
    "python-dotenv",
    "notion-markdown",
    "requests",
]

[project.scripts]
run-convert = "run_convert:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["run_convert.py", "run_upload.py", "pipeline"]

[tool.uv.sources]
confluence-markdown-exporter = { path = "package/confluence-markdown-exporter", editable = true }
notion-markdown = { path = "package/notion-markdown", editable = true }
